--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -91,11 +91,23 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Dependencies\GLAD\src\glad.c" />
+    <ClCompile Include="src\ElementArrayBuffer.cpp" />
     <ClCompile Include="src\Source.cpp" />
+    <ClCompile Include="src\VertexArray.cpp" />
+    <ClCompile Include="src\VertexBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shader_scripts\fs.shader" />
     <None Include="shader_scripts\vs.shader" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\chernoGL\chernoGL\chernoGL\textures\container.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\ElementArrayBuffer.h" />
+    <ClInclude Include="src\VertexArray.h" />
+    <ClInclude Include="src\VertexBuffer.h" />
+    <ClInclude Include="src\VertexBufferLayout.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
